FAB: fix action's button alignment in compact theme

--- a/scss/widgets/generic/speedDialAction/_index.scss
+++ b/scss/widgets/generic/speedDialAction/_index.scss
@@ -10,7 +10,7 @@
 @use "../overlay";
 
 $generic-fa-button-size: 30px;
-$generic-fa-button-label-padding: 0 10px;
+$generic-fa-button-label-padding: 5px 10px;
 $generic-fa-button-label-offset: 10px;
 $generic-fa-button-label-shadow: $speed-dial-action-label-shadow;
 
@@ -18,7 +18,7 @@ $generic-fa-button-label-shadow: $speed-dial-action-label-shadow;
   $generic-main-fa-button-size,
   $generic-fa-button-size,
   $generic-base-icon-size,
-  $generic-base-font-size,
+  $generic-fa-button-label-font-size,
   $generic-fa-button-label-padding,
   $generic-fa-button-label-offset,
   $speed-dial-action-color,
